Convert to js module. Config to bundle with rollup.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/latest/normalize.css">
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="dist/wysiwyg.css" />
-<script type="text/javascript" src="wysiwyg.js"></script>
 <style>
 body {
     font-family: Arial,Verdana;
@@ -294,5 +293,6 @@ ready(function() {
 </div>
 
 </div>
+<script type="text/javascript" src="dist/wysiwyg.js"></script>
 </body>
 </html>
